tests/semantic/invalid/redecl-in-same-scope-err.c
int main() {
  int x;
  int x;        // error: redeclaration
  return x;
}
